# udashboard

./: .gitignore  Cargo.toml  README.md  architechture.pic  config.ron  drawing.md  dynamic_images.md  roadmap.md
examples/: demo.crvm  demo.ron  demo.sh  demo_debuger.py  demo_editor.sh  face.img  tach.img
scripts/: data.py  debuger.py  editor.py  replay.py  simulate.py
src/: ast.rs  bytecode.rs  clock.rs  config.rs  data.rs  drm.rs  env.rs  grammar.lalrpop  gtk.rs  lib.rs  main.rs  output.rs  parser.rs  render.rs  typechecker.rs  util.rs  v1.rs  vm.rs  windowed.rs
