[package]
authors = ["Brandon Lewis <dotsony@gmail.com>"]
edition = "2018"
name = "udashboard"
version = "0.1.0"

[dependencies]
ron = "*"
drm = "*"
nix = "0.11.0"
cairo-sys-rs = "0.8.0"

[dependencies.cairo-rs]
default-features = false
features = ["png"]


[dependencies.serde]
features = ["derive"]
version = "1.0"
