[package]
authors = ["Brandon Lewis <dotsony@gmail.com>"]
edition = "2018"
name = "udashboard"
version = "0.1.0"
license = "LGPL-3.0-or-later"

[dependencies]
ron = "*"
nix = "0.11.0"
cairo-sys-rs = "0.8.0"
serde_json = "*"
enumflags2 = "^0.6"

[dependencies.drm]
git = "https://github.com/emdash/drm-rs"
branch = "armhf"
features = ["use_bindgen"]

[dependencies.cairo-rs]
default-features = false
features = ["png"]


[dependencies.serde]
features = ["derive"]
version = "1.0"
