[package]
authors = ["Brandon Lewis <dotsony@gmail.com>"]
edition = "2018"
name = "udashboard"
version = "0.1.0"
license = "LGPL-3.0-or-later"

[dependencies]
ron = "*"
nix = "0.11.0"
cairo-sys-rs = "0.9.1"
serde_json = "*"
enumflags2 = "^0.6"
regex = "1"
lazy_static = "1.4.0"
lalrpop-util = "0.18.1"

[dependencies.drm]
git = "https://github.com/Smithay/drm-rs"

[dependencies.cairo-rs]
default-features = false
features = ["png"]

[dependencies.serde]
features = ["derive"]
version = "1.0"

[dependencies.gtk]
version = "0.8.0"
features = ["v3_18"]

[build-dependencies.lalrpop]
features = ["lexer"]
version = "0.18.1"